--- a/projects/templates/projects/blog_page.html
+++ b/projects/templates/projects/blog_page.html
@@ -32,10 +32,10 @@
                         <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#skills">Skills</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#skills">Skills</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/my-portfolio/#portfolio">Portfolio</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#experience">Experience</a>
