--- a/projects/templates/projects/blog_page.html
+++ b/projects/templates/projects/blog_page.html
@@ -29,22 +29,22 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#about">About</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#about">About</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#skills">Skills</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#skills">Skills</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#portfolio">Portfolio</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#experience">Experience</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#experience">Experience</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#education">Education</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#education">Education</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/my-portfolio/#contact">Contact</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://raulaznar.onrender.com/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
