--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -140,7 +140,7 @@
                     <div class="col-md-6 col-lg-4 mb-4">
                         <div class="portfolio-project">
                             <figure class="effect-bubba">
-                                <a href="{{ project.url }}" target="_blank">
+                                <a href="{{ project.url }}" target="_self">
                                     {% image project.image width-400 class="card-img-top project-img" %}
                                     <div>View project</div>
                                 </a>
